--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
     "@popperjs/core": "^2.11.7",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -25,8 +26,10 @@
     "react-dom": "^18.2.0",
     "react-icons-kit": "^2.0.0",
     "react-paginate": "^8.1.4",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "sassy-datepicker": "^0.10.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
